src/test/ui/borrowck/issue-54499-field-mutation-marks-mut-as-used.ast.stderr
error[E0381]: use of possibly uninitialized variable: `t.0`
  --> $DIR/issue-54499-field-mutation-marks-mut-as-used.rs:25:31
   |
LL |         println!("{:?} {:?}", t.0, t.1);
   |                               ^^^ use of possibly uninitialized `t.0`

error[E0381]: use of possibly uninitialized variable: `t.1`
  --> $DIR/issue-54499-field-mutation-marks-mut-as-used.rs:25:36
   |
LL |         println!("{:?} {:?}", t.0, t.1);
   |                                    ^^^ use of possibly uninitialized `t.1`

error[E0381]: use of possibly uninitialized variable: `u.0`
  --> $DIR/issue-54499-field-mutation-marks-mut-as-used.rs:35:31
   |
LL |         println!("{:?} {:?}", u.0, u.1);
   |                               ^^^ use of possibly uninitialized `u.0`

error[E0381]: use of possibly uninitialized variable: `u.1`
  --> $DIR/issue-54499-field-mutation-marks-mut-as-used.rs:35:36
   |
LL |         println!("{:?} {:?}", u.0, u.1);
   |                                    ^^^ use of possibly uninitialized `u.1`

error[E0381]: use of possibly uninitialized variable: `v.x`
  --> $DIR/issue-54499-field-mutation-marks-mut-as-used.rs:45:31
   |
LL |         println!("{:?} {:?}", v.x, v.y);
   |                               ^^^ use of possibly uninitialized `v.x`

error[E0381]: use of possibly uninitialized variable: `v.y`
  --> $DIR/issue-54499-field-mutation-marks-mut-as-used.rs:45:36
   |
LL |         println!("{:?} {:?}", v.x, v.y);
   |                                    ^^^ use of possibly uninitialized `v.y`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0381`.
